--- a/build.gradle
+++ b/build.gradle
@@ -112,10 +112,21 @@ dependencies {
 
 shadowJar {
     configurations = [project.configurations.shade]
-    relocate 'com.tterrag.registrate', 'com.tropicraft.ltextras.repack.registrate'
+    relocate 'com.tterrag.registrate', 'com.lovetropics.extras.repack.registrate'
+    classifier = ''
 }
 
+reobf {
+    shadowJar {}
+}
+
+build.dependsOn shadowJar
+build.dependsOn reobfShadowJar
+
+
 jar {
+    classifier = 'slim'
+
     manifest {
         attributes([
             "Specification-Title": "ltextras",
