--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ minecraft {
 
     runs {
         client {
-        	taskName 'ltextras_client'
-        	
+            taskName 'ltextras_client'
+            
             workingDirectory project.file('run')
 
             property 'forge.logging.markers', 'REGISTRIES'
@@ -46,7 +46,7 @@ minecraft {
         }
 
         server {
-        	taskName 'ltextras_server'
+            taskName 'ltextras_server'
         
             workingDirectory project.file('run')
 
@@ -61,7 +61,7 @@ minecraft {
         }
         
         data {
-        	taskName 'ltextras_data'
+            taskName 'ltextras_data'
         
             workingDirectory project.file('run')
             
@@ -76,43 +76,48 @@ minecraft {
                 }
             }
             
-			args '--mod', 'ltextras', '--all', '--output', '"' + rootProject.file('src/generated/resources/') + '"',
-				 '--existing', '"' + sourceSets.main.resources.srcDirs[0] + '"' 
-			
+            args '--mod', 'ltextras', '--all', '--output', '"' + rootProject.file('src/generated/resources/') + '"',
+                 '--existing', '"' + sourceSets.main.resources.srcDirs[0] + '"' 
+            
         }
     }
 }
 
 sourceSets.main.resources {
-	srcDir 'src/generated/resources'
+    srcDir 'src/generated/resources'
 }
 
 repositories {
-	mavenLocal()
+    mavenLocal()
 }
 
 configurations {
-	shade
+    shade
 }
 
 repositories {
-	maven { // Registrate
-		url "http://maven.tterrag.com/"
-	}
-	mavenLocal()
+    maven { // Registrate
+        url "http://maven.tterrag.com/"
+    }
+    mavenLocal()
 }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     
-	def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
+    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
     implementation fg.deobf(registrate)
     shade registrate
+    
+    def ltlib = "com.lovetropics.lib:LTLib:${ltlib_version}"
+    implementation fg.deobf(ltlib)
+    shade ltlib
 }
 
 shadowJar {
     configurations = [project.configurations.shade]
     relocate 'com.tterrag.registrate', 'com.lovetropics.extras.repack.registrate'
+    relocate 'com.lovetropics.lib', 'com.lovetropics.extras.repack.ltlib'
     classifier = ''
 }
 
