--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ minecraft_version=1.15.2
 forge_version=31.2.0
 
 registrate_version=1.0.0-rc.1
+ltlib_version=1.0.0-release+2
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
