--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -13,3 +13,17 @@ authors="tterrag" #optional
 description='''
 Extra content for the LoveTropics map build.
 '''
+
+[[dependencies.ltextras]] 
+    modId="forge"
+    mandatory=true 
+    versionRange="[31.2.44,)"
+    ordering="NONE"
+    side="BOTH"
+
+[[dependencies.create]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="[1.15.2,1.16)"
+    ordering="NONE"
+    side="BOTH"
