basic matrix translation optimisation

--- a/build.gradle
+++ b/build.gradle
@@ -157,3 +157,11 @@ jar {
         ])
     }
 }
+
+if (System.getProperty("idea.sync.active") == "true") {
+    afterEvaluate {
+        tasks.withType(JavaCompile).all {
+            it.options.annotationProcessorPath = files()
+        }
+    }
+}
