--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,3 +37,6 @@ public net.minecraft.client.renderer.GameRenderer func_215311_a(Lnet/minecraft/c
 public net.minecraft.client.renderer.entity.EntityRendererManager * #all fields public
 public net.minecraft.client.world.ClientWorld field_217428_a #globalEntities
 public net.minecraft.world.ServerWorld field_73068_P # allPlayersSleeping
+
+# performance
+public net.minecraft.world.server.ServerChunkProvider$ChunkExecutor
