--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
         mavenCentral()
-        mavenLocal()
-        maven { url='https://repo.spongepowered.org/maven' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
@@ -103,7 +101,7 @@ configurations {
 
 repositories {
     maven { // Registrate
-        url "http://maven.tterrag.com/"
+        url "https://maven.tterrag.com/"
     }
     mavenLocal()
 }
