--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,30 +1,30 @@
 # Model hacks for item frames, need forge patch
-public-f net.minecraft.client.renderer.model.ModelBakery field_209607_C # STATE_CONTAINER_OVERRIDES
+public-f net.minecraft.client.resources.model.ModelBakery f_119242_ # STATE_CONTAINER_OVERRIDES
 
 # Fixing vanilla stupidity with flower pots
-protected net.minecraft.block.FlowerPotBlock field_196451_b
+protected net.minecraft.world.level.block.FlowerPotBlock f_53524_
 
 # Tweaking canyon gen height
-protected net.minecraft.world.gen.carver.CanyonWorldCarver func_222729_a(Lnet/minecraft/world/chunk/IChunk;JIIIDDDFFFIIDLjava/util/BitSet;)V # func_222729_a
+protected net.minecraft.world.level.levelgen.carver.CanyonWorldCarver func_222729_a(Lnet/minecraft/world/chunk/IChunk;JIIIDDDFFFIIDLjava/util/BitSet;)V # func_222729_a
 
 # Tree helpers
 public net.minecraft.world.gen.feature.AbstractTreeFeature func_214572_g(Lnet/minecraft/world/gen/IWorldGenerationBaseReader;Lnet/minecraft/util/math/BlockPos;)Z # isAirOrLeaves
 
 # Map of DyeColor to wool block, just useful
-public net.minecraft.entity.passive.SheepEntity field_200206_bz # WOOL_BY_COLOR
+public net.minecraft.world.entity.animal.Sheep f_29800_ # WOOL_BY_COLOR
 
 # Overriding chest container name
 public net.minecraft.block.ChestBlock$InventoryFactory
-public net.minecraft.block.ChestBlock field_220110_j # field_220110_j
+public net.minecraft.world.level.block.ChestBlock f_51487_ # field_220110_j
 
 # Loot Tables
-protected net.minecraft.data.loot.BlockLootTables field_218573_a
-protected net.minecraft.data.loot.BlockLootTables field_218574_b
-protected net.minecraft.data.loot.BlockLootTables field_218575_c
-protected net.minecraft.data.loot.BlockLootTables field_218576_d
-protected net.minecraft.data.loot.BlockLootTables field_218577_e
-protected net.minecraft.data.loot.BlockLootTables field_218579_g
-protected net.minecraft.data.loot.BlockLootTables field_218580_h
+protected net.minecraft.data.loot.BlockLoot f_124062_
+protected net.minecraft.data.loot.BlockLoot f_124063_
+protected net.minecraft.data.loot.BlockLoot f_124064_
+protected net.minecraft.data.loot.BlockLoot f_124065_
+protected net.minecraft.data.loot.BlockLoot f_124066_
+protected net.minecraft.data.loot.BlockLoot f_124068_
+protected net.minecraft.data.loot.BlockLoot f_124069_
 
 # Umbrella Shadow
 protected net.minecraft.client.renderer.entity.EntityRenderer func_76975_c(Lnet/minecraft/entity/Entity;DDDFF)V # renderShadow
@@ -33,13 +33,13 @@ protected net.minecraft.client.renderer.entity.EntityRenderer func_76977_a(Lnet/
 #from coroutil and weather2
 public net.minecraft.client.particle.Particle * #all fields public
 public net.minecraft.client.renderer.GameRenderer * #all fields public
-public net.minecraft.client.renderer.GameRenderer func_215311_a(Lnet/minecraft/client/renderer/ActiveRenderInfo;FZ)D # getFOVModifier
-public net.minecraft.client.renderer.entity.EntityRendererManager * #all fields public
-public net.minecraft.client.world.ClientWorld field_217428_a #globalEntities
+public net.minecraft.client.renderer.GameRenderer m_109141_(Lnet/minecraft/client/Camera;FZ)D # getFOVModifier
+public net.minecraft.client.renderer.entity.EntityRenderDispatcher * #all fields public
+public net.minecraft.client.multiplayer.ClientLevel field_217428_a #globalEntities
 public net.minecraft.world.ServerWorld field_73068_P # allPlayersSleeping
 
 # performance
-public net.minecraft.world.server.ServerChunkProvider$ChunkExecutor
+public net.minecraft.server.level.ServerChunkCache$MainThreadExecutor
 
 # Water barriers
-public net.minecraft.state.StateHolder field_235893_d_ # mapCodec
+public net.minecraft.world.level.block.state.StateHolder f_61113_ # mapCodec
