--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext.buildnumber = 0
 project.buildnumber = System.getenv('BUILD_NUMBER') ?: 'custom'
 version = "${mod_version}-${release_type}+${buildnumber}"
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
     mappings channel: 'official', version: minecraft_version
@@ -37,8 +37,7 @@ minecraft {
             workingDirectory project.file('run')
             arg "-mixin.config=ltextras.mixins.json"
 
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
+            property 'forge.logging.console.level', 'info'
 
             mods {
                 ltextras {
@@ -53,8 +52,7 @@ minecraft {
             workingDirectory project.file('run')
             arg "-mixin.config=ltextras.mixins.json"
 
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
+            property 'forge.logging.console.level', 'info'
 
             mods {
                 ltextras {
@@ -71,7 +69,6 @@ minecraft {
 
             environment 'target', 'fmluserdevdata'
 
-            property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
 
             mods {
@@ -91,10 +88,6 @@ sourceSets.main.resources {
     srcDir 'src/generated/resources'
 }
 
-repositories {
-    mavenLocal()
-}
-
 configurations {
     shade
 }
@@ -109,7 +102,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     
-    def registrate = "com.tterrag.registrate:Registrate:MC1.16.2-${registrate_version}"
+    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
     implementation fg.deobf(registrate)
     shade registrate
     
@@ -117,11 +110,12 @@ dependencies {
     implementation fg.deobf(ltlib)
     shade ltlib
 
-    // Annotation Processors
-    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+    runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.70')
+    runtimeOnly fg.deobf('com.simibubi.create:Create:mc1.18.2_v0.4.1+113')
 
-    runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel:1.16-0.2.4.50')
-	runtimeOnly fg.deobf('com.simibubi.create:Create:mc1.16.5_v0.3.2f+464')
+    if (System.getProperty("idea.sync.active") != "true") {
+        annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    }
 }
 
 mixin {
@@ -156,13 +150,5 @@ jar {
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
             "MixinConfigs": "ltextras.mixins.json"
         ])
-    }
-}
-
-if (System.getProperty("idea.sync.active") == "true") {
-    afterEvaluate {
-        tasks.withType(JavaCompile).all {
-            it.options.annotationProcessorPath = files()
-        }
     }
 }
