--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-mod_version=1.1.0
+mod_version=1.2.0
 release_type=release
-minecraft_version=1.16.5
-forge_version=36.2.0
+minecraft_version=1.18.2
+forge_version=40.1.0
 
-registrate_version=1.0.0-beta.33
-ltlib_version=1.1.0-release+3
+registrate_version=1.0.25
+ltlib_version=1.2.0-SNAPSHOT
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
