--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ mod_version=1.2.0
 release_type=release
 minecraft_version=1.18.2
 forge_version=40.1.0
+parchment_version=2022.04.23-nightly-SNAPSHOT
 
 registrate_version=1.0.25
 ltlib_version=1.2.0-SNAPSHOT
