--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ forge_version=40.1.0
 parchment_version=2022.04.23-nightly-SNAPSHOT
 
 registrate_version=1.0.25
-ltlib_version=1.2.0-SNAPSHOT
+ltlib_version=1.2.0-release+2
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
