--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,32 @@
 name: Java CI with Gradle
 
 on: [push]
-
 jobs:
+
   jdk17:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: Set up JDK 17
+    - name: Setup JDK 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
     - name: Build with Gradle
-      run: ./gradlew build
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: build
+
+    - name: Locate built JARfile
+      id: jar
+      run: echo "##[set-output name=jarfile;]$(ls -1 build/libs/)"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2.2.3
       with:
-          name: jdk16
-          path: build/libs/**/*.jar
+          name: ${{ steps.jar.outputs.jarfile }}
+          path: build/libs/${{ steps.jar.outputs.jarfile }}
