--- a/build.gradle
+++ b/build.gradle
@@ -11,13 +11,12 @@ buildscript {
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
-plugins {
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
-}
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'org.spongepowered.mixin'
+
+jarJar.enable()
 
 group = 'com.lovetropics.extras'
 archivesBaseName = 'LTExtras'
@@ -100,10 +99,6 @@ sourceSets.main.resources {
     srcDir 'src/generated/resources'
 }
 
-configurations {
-    shade
-}
-
 repositories {
     maven { // Registrate
         url "https://maven.tterrag.com/"
@@ -113,14 +108,14 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    
-    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
-    implementation fg.deobf(registrate)
-    shade registrate
 
-    def ltlib = "com.lovetropics.lib:LTLib:${ltlib_version}"
-    implementation fg.deobf(ltlib)
-    shade ltlib
+    jarJar(implementation(fg.deobf("com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"))) {
+        jarJar.ranged(it, "[MC${minecraft_version}-${registrate_version},MC1.20)")
+    }
+
+    jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:${ltlib_version}"))) {
+        jarJar.ranged(it, "[${ltlib_version},1.3)")
+    }
 
     runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.70')
     runtimeOnly fg.deobf('com.simibubi.create:Create:mc1.18.2_v0.4.1+113')
@@ -134,19 +129,14 @@ mixin {
     add sourceSets.main, "ltextras.refmap.json"
 }
 
-shadowJar {
-    configurations = [project.configurations.shade]
-    relocate 'com.tterrag.registrate', 'com.lovetropics.extras.repack.registrate'
-    relocate 'com.lovetropics.lib', 'com.lovetropics.extras.repack.ltlib'
-    classifier = ''
+tasks.jarJar.configure {
+    classifier ''
+    finalizedBy('reobfJarJar')
 }
 
 reobf {
-    shadowJar {}
+    jarJar { }
 }
-
-build.dependsOn shadowJar
-build.dependsOn reobfShadowJar
 
 jar {
     classifier = 'slim'
