--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,13 @@ buildscript {
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
+plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+}
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'org.spongepowered.mixin'
-
-jarJar.enable()
 
 group = 'com.lovetropics.extras'
 archivesBaseName = 'LTExtras'
@@ -99,6 +100,10 @@ sourceSets.main.resources {
     srcDir 'src/generated/resources'
 }
 
+configurations {
+    shade
+}
+
 repositories {
     maven { // Registrate
         url "https://maven.tterrag.com/"
@@ -108,14 +113,14 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    
+    def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
+    implementation fg.deobf(registrate)
+    shade registrate
 
-    jarJar(implementation(fg.deobf("com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"))) {
-        jarJar.ranged(it, "[MC${minecraft_version}-${registrate_version},MC1.20)")
-    }
-
-    jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:${ltlib_version}"))) {
-        jarJar.ranged(it, "[${ltlib_version},1.3)")
-    }
+    def ltlib = "com.lovetropics.lib:LTLib:${ltlib_version}"
+    implementation fg.deobf(ltlib)
+    shade ltlib
 
     runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.70')
     runtimeOnly fg.deobf('com.simibubi.create:Create:mc1.18.2_v0.4.1+113')
@@ -129,14 +134,19 @@ mixin {
     add sourceSets.main, "ltextras.refmap.json"
 }
 
-tasks.jarJar.configure {
-    classifier ''
-    finalizedBy('reobfJarJar')
+shadowJar {
+    configurations = [project.configurations.shade]
+    relocate 'com.tterrag.registrate', 'com.lovetropics.extras.repack.registrate'
+    relocate 'com.lovetropics.lib', 'com.lovetropics.extras.repack.ltlib'
+    classifier = ''
 }
 
 reobf {
-    jarJar { }
+    shadowJar {}
 }
+
+build.dependsOn shadowJar
+build.dependsOn reobfShadowJar
 
 jar {
     classifier = 'slim'
