--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ dependencies {
     }
 
     jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:${ltlib_version}"))) {
-        jarJar.ranged(it, "[${ltlib_version},1.3)")
+        jarJar.ranged(it, "[1.2,1.3)")
     }
 
     runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.70')
