--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
-mod_version=1.2.0
+mod_version=1.3.0
 release_type=release
-minecraft_version=1.18.2
-forge_version=40.1.0
-parchment_version=2022.04.23-nightly-SNAPSHOT
+minecraft_version=1.19.2
+forge_version=43.2.13
+parchment_version=2022.11.27-nightly-SNAPSHOT
 
-registrate_version=1.1.3
-ltlib_version=1.2.0-release+2
+registrate_version=1.1.5
+# pls fixme: relies on local lib!
+ltlib_version=1.3.0-SNAPSHOT
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
