Fix: expand mod version in mods.toml and bump dependency version

--- a/build.gradle
+++ b/build.gradle
@@ -148,3 +148,17 @@ jar {
         ])
     }
 }
+
+def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta']
+def replaceProperties = [
+        mod_version: mod_version,
+]
+
+processResources {
+    inputs.properties replaceProperties
+    replaceProperties.put 'project', project
+
+    filesMatching(resourceTargets) {
+        expand replaceProperties
+    }
+}
