--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="All Rights Reserved"
 
 [[mods]]
 modId="ltextras"
-version="${file.jarVersion}"
+version="$mod_version"
 displayName="LTExtras"
 displayURL="https://lovetropics.org"
 credits=""
@@ -17,14 +17,14 @@ Extra content for the LoveTropics map build.
 [[dependencies.ltextras]] 
     modId="forge"
     mandatory=true 
-    versionRange="[40.1.0,)"
+    versionRange="[47.0.0,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.ltextras]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.18,)"
+    versionRange="[1.20,)"
     ordering="NONE"
     side="BOTH"
 
