--- a/build.gradle
+++ b/build.gradle
@@ -107,9 +107,7 @@ dependencies {
         jarJar.ranged(it, "[$registrate_version,MC1.21)")
     }
 
-    jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:${ltlib_version}"))) {
-        jarJar.ranged(it, "[1.3,1.4)")
-    }
+    jarJar(implementation(fg.deobf("com.lovetropics.lib:LTLib:$ltlib_version")))
 
 //    runtimeOnly fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.7.0.70')
 //    runtimeOnly fg.deobf('com.simibubi.create:Create:mc1.18.2_v0.4.1+113')
