--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ parchment_version=2023.06.26-1.20.1
 
 registrate_version=MC1.20-1.3.3
 ltlib_version=[1.3,1.4)
+placeholder_api_version=[2.1,2.2)
 
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
