Update dependencies to fix server launch issue

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@ mod_id=ltextras
 mod_version=1.3.0
 release_type=release
 minecraft_version=1.21
-neo_version=21.0.58-beta
+neo_version=21.0.167
 parchment_version=2024.06.23
 
-registrate_version=1.3.0+35
+registrate_version=1.3.0+50
 ltlib_version=[1.4,1.5)
 placeholder_api_version=[2.5,2.6)
 
